add old meta tags in for SEO purpose until updated

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="insurance, Insurance, Health Insurance, health insurance, Health insurance, Group, Aetna, AIG, Highmark, Health America, Group insurance, Short Term Medical, Pennsylvania health insurance">
+    <meta name="description" content="Health benefit services, health insurance specialists and compliance experts serving PA">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>HBSPA - Health Benefits Services Pennsylvania</title>
+    <title>HBSPA - Health Benefits Services LLC Pennsylvania</title>
   </head>
   <body>
 
