--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   <body>
 
     <div class ="container-fluid">
-      <div class="row height-400">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
+      <div class="row height-200">
+        <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6 text-center">
+          <img src="images/logo.png" alt="Health Benefits Services"/>
+        </div>
+      </div>
+      <div class="row height-300">
+        <div class="col-xs-offset-3 col-xs-6 col-md-6">
         </div>
       </div>
     </div>
