--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class ="container-fluid">
       <div class="row height-200">
         <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6 text-center">
-          <img src="images/logo.png" alt="Health Benefits Services"/>
+          <img src="images/hbs_logo.png" alt="Health Benefits Services"/>
         </div>
       </div>
       <div class="row height-300">
