--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class ="container-fluid">
       <div class="row height-200">
         <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6 text-center">
-          <img src="images/hbs_logo.png" alt="Health Benefits Services"/>
+          <img src="images/hbs_logo.png" alt="Health Benefit Services"/>
         </div>
       </div>
       <div class="row height-300">
@@ -27,7 +27,7 @@
     <div class ="container negative-margin-top">
       <div class="row">
         <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <h1>Health Benefits Services</h1>
+          <h1>Health Benefit Services</h1>
         </div>
       </div>
 
