--- a/index.html
+++ b/index.html
@@ -1,88 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="insurance, Insurance, Health Insurance, health insurance, Health insurance, Group, Aetna, AIG, Highmark, Health America, Group insurance, Short Term Medical, Pennsylvania health insurance">
     <meta name="description" content="Health benefit services, health insurance specialists and compliance experts serving PA">
+    <meta name="author" content="Stephanie Symosko">
+
+    <title>HBSPA - Health Benefit Services LLC Pennsylvania</title>
+
+    <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
-    <title>HBSPA - Health Benefits Services LLC Pennsylvania</title>
+
+    <!-- Custom Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
   </head>
+
   <body>
 
-    <div class ="container-fluid">
-      <div class="row height-200">
-        <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6 text-center">
-          <img src="images/hbs_logo.png" alt="Health Benefit Services"/>
+
+      <div class="topline">
+          <div class="row">
+            <section class="col-sm-1 col-xs-1"></section>
+            <section class="col-sm-offset-1 col-sm-4 col-xs-offset-1 col-xs-4">
+              <div class="intro-phone-number text-left">
+                <span class="glyphicon glyphicon-earphone"></span>Toll Free : 1-800-347-8984
+              </div>
+            </section>
+            <section class="col-sm-offset-1 col-sm-4 col-xs-offset-1 col-xs-4">
+              <div class="intro-contact-btn text-right">
+                <a class="btn btn-default" href="#footerform" role="button">Contact</a>
+              </div>
+            </section>
+            <section class="col-sm-1 col-xs-1"></section>
+          </div>
+        </div> 
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default">
+      
+        <div class="container">
+
+
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" 
+                        data-toggle="collapse" 
+                        data-target="#collapsemenu"
+                        aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">
+                  <img class="brand-img" src="images/hbs_logo.png" alt="Health Benefit Services"/>
+                </a>
+                <p class="navbar-text hidden-xs">Health Benefit Services LLC</p>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="collapsemenu">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                      <a class="" href="#">About</a>
+                    </li>
+                    <li>
+                      <a href="#" class="dropdown-toggle" 
+                        data-toggle="dropdown" role="button" 
+                        aria-haspopup="true" 
+                        aria-expanded="false">Products
+                        <span class="caret"></span>
+                          <ul class="dropdown-menu">
+                            <li><a href="#">Senior Products</a></li>
+                            <li><a href="#">Individual Products</a></li>
+                            <li><a href="#"> Group Products</a></li>
+                          </ul>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="" href="#">Career</a>
+                    </li>
+                    <li>
+                      <a class="" href="#">Agent Resources</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-      </div>
-      <div class="row height-300">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6">
+        <!-- /.container-fluid -->
+    </nav>
+
+<div class="content container">
+    <div class="row">
+        <section class="col-xs-12">
+          <div class="jumbotron">
+            <p>Health Benefit Services is an indepenct agency specializing in group, individual and senior health including medicine and retirement strategies.</p>
+            <h3>Our commitment to you:</h3>
+            <p>
+              <ul>
+                <li>
+                  <b>Service:</b> We will assist you and your employees in resolving claims problems and handle other benefits questions and issues.  We will provide you with our toll-free number, your Account Manager’s business card for each of your employees, and bulletin board posters to create awareness of our service availability.
+                </li>
+                <li>
+                  <b>Market Knowledge:</b> We will keep you current on new ideas and concepts in the benefits arena, to help you control costs while retaining valued employees.  We will evaluate all viable carriers when seeking quotes for your coverage.
+                </li>
+                <li>
+                  <b>Compliance Expertise:</b> We will advise you on insurance compliance issues such as COBRA, HIPAA, coverage mandates, etc.
+                </li>
+              </ul>
+            </p>
+          </div>
+
+        </section>
+    </div><!-- row -->
+</div><!-- content container -->
+
+<!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Submit A Quote</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="sentMessage" id="contactForm" novalidate>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-
-    <div class ="container negative-margin-top">
-      <div class="row">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <h1>Health Benefit Services</h1>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <h2 class="text-uppercase coming-soon">Coming Soon!</h2>
-          <p>We're currently working on creating our new website.<br/>  
-          We'll be launching soon.  Please check back.</p>
-        </div>
-      </div>
-
-      <div class="row margin-top">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <p class="text-muted">Contact Information : </p>
-        </div>
-      </div>
+    </section>
 
 
-      <div class="row">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <p class="text-muted">993 Brodhead Rd STE 201 </p>
-        </div>
-      </div>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-      <div class="row">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <p class="text-muted">Corapolis, PA 15108 </p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <p class="text-muted">(412) 865 - 3200</p>
-        </div>
-      </div>
-
-      <div class="row margin-top">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <p class="text-muted">Hours :</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <p class="text-muted">M - F | 9 am - 5 pm</p>
-        </div>
-      </div>
-
-
-    <!-- 
-      When creating the columns for the staff, look at creating columns on Lynda.com chapter 2.
-
-    -->
-    <script src="js/jquery-1.12.3.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
     <!-- <script src="../js/script.js"></script> -->
   </body>
 </html>
