--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
   <body>
 
-
+    
       <div class="topline">
+        <div class="container">
           <div class="row">
             <section class="col-sm-1 col-xs-1"></section>
             <section class="col-sm-offset-1 col-sm-4 col-xs-offset-1 col-xs-4">
@@ -52,6 +53,7 @@
             <section class="col-sm-1 col-xs-1"></section>
           </div>
         </div> 
+      </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default">
@@ -143,11 +145,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Please fill out the form below to submit a quote.</h3>
+                    <!-- <h3 class="section-subheading text-muted">Please fill out the form below to submit a quote.</h3> -->
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-md-6">
                     <form method="post" action="php/contact_me.php" role="form" name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
@@ -159,8 +161,8 @@
                                   <input type="text" class="form-control" placeholder="Your Company *" id="company" required data-validation-required-message="Please enter your company.">
                                     <p class="help-block text-danger"></p>  
                                 </div>
+                                <!-- <p> Type : </p>
                                 <div class="radio">
-                                  <p> Type : </p>
                                   <label>
                                     <input name="insurancetype" type="radio" value="group"> Group
                                   </label>
@@ -169,7 +171,7 @@
                                   <label>
                                     <input name="insurancetype" type="radio" value="individual"> Individual
                                   </label>
-                                </div>
+                                </div> -->
                                 
                             </div>
                             <div class="col-md-6">
@@ -187,10 +189,46 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Submit</button>
+                                <button type="submit" class="btn btn-xl" style="margin-bottom:30px;">Submit</button>
                             </div>
                         </div>
                     </form>
+                </div>
+                <div class="col-md-6 contact-info">
+                  <div class="contact-block clearfix">
+                    <div class="leftblock"><span class="badge"><span class="glyphicon glyphicon-map-marker"></span></span></div>
+                    <div class="rightblock">
+                      <h4 class="contact-block-heading">Office Address</h4>
+                      <p class="contact-block-paragraph">993 Brodhead Rd., Suite 201 <br/>
+                        Coraopolis, PA 15108 </p>
+                    </div>
+                  </div>
+
+                  <div class="contact-block clearfix">
+                    <div class="leftblock"><span class="badge"><span class="glyphicon glyphicon-earphone"></span></span></span></div>
+                    <div class="rightblock">
+                      <h4 class="contact-block-heading">Phone</h4>
+                      <p class="contact-block-paragraph">Toll Free : 1-800-347-8984 <br/>
+                        Local : (412)865-3200 </p>
+                    </div>
+                  </div>
+
+                  <div class="contact-block clearfix">
+                    <div class="leftblock"><span class="badge"><span class="glyphicon glyphicon-print"></span></span></span></span></div>
+                    <div class="rightblock">
+                      <h4 class="contact-block-heading">Fax</h4>
+                      <p class="contact-block-paragraph">(412)865-3202</p>
+                    </div>
+                  </div>
+
+                  <div class="contact-block clearfix">
+                    <div class="leftblock"><span class="badge"><span class="glyphicon glyphicon-time"></span></span></span></span></div>
+                    <div class="rightblock bottom-border-none">
+                      <h4 class="contact-block-heading">Hours</h4>
+                      <p class="contact-block-paragraph">M - F | 9 am - 5 pm</p>
+                    </div>
+                  </div>
+
                 </div>
             </div>
         </div>
