--- a/index.html
+++ b/index.html
@@ -234,8 +234,14 @@
         </div>
     </section>
 
-    <footer id="footer">
-
+    <footer>
+       <div class="row">
+         <div class="col-lg-12 text-center">
+           <p class="copyright">Copyright &copy; <a href="http://www.hbspa.com">HSBPA.COM</a> 2016</p>
+           <p class="developedby">Developed by Stephanie Symosko</p>
+        </div>
+      </div>
+ 
     </footer>
 
     <!-- jQuery -->
